..F....... [ZBX-5142] changed media type field label from 'Description' to 'Name' (Vedmak)
....I..... [ZBX-5314] increased size of autoincrement fields for PostgreSQL database (Sasha)
..F....... [ZBX-1845] added tabs to host massupdate form (Vedmak)

--------------------------------------------------------------------------------
Changes for 2.0.4rc1

New features:
..F....... [ZBX-5556] action recovery message body can now be empty (Vedmak)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Hungarian, Italian, Polish, Slovak and Russian translations; thanks to Zabbix translators (Richlv)
A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
.D........ [ZBX-5582] clarified StartTrappers parameter in the server and proxy configuration files (Richlv)
..F....... [ZBX-4833] screens are now cloned correctly when full clone template (Vedmak)
..F....... [ZBX-5547] fixed server name and other parameters in frontend setup are not escaped (Vedmak)
..F....... [ZBX-3347] fixed error when create item with new application that already exists (Vedmak)
A......... [ZBX-3907] fixed api user.logout method (Vedmak)
..F....... [ZBX-4983] fixed import of 1.8 templates if they contain already existing host macros (Vedmak)
..F....... [ZBX-5579] in monitoring->triggers if trigger has no events, acknowledge column display 'no events' instead of 'Acknowledged' (Vedmak)
..F....... [ZBX-4247] fixed error when trigger expression items has same trigger expression like parameter in key (Vedmak)
..F....... [ZBX-5606] removed 'units' and 'store value' fields for character data items (Vedmak)
..F....... [ZBX-5608] fixed incorrect macro resolving in trigger descriptions if expression has duplicate functions (Vedmak)